<resources>
    <string name="app_name">assignment1</string>
    <string name="student_name">Chow Timmy</string>
    <string name="SID">20150400A</string>
    <string name="home">Home</string>
    <string name="bmi">BMI</string>
    <string name="zodiac">Zodiac</string>
    <string name="name">Name:</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="birth">Birth：</string>
    <string name="gender">Gender:</string>
    <string name="tv_bmi">BMI:</string>
    <string name="status">Status:</string>
    <string name="advice">Advice:</string>
    <string name="show_or_hide">Show</string>
    <string name="underweight">If you are underweight, you need to eat more food to maintain your health.</string>
    <string name="healthy">If you are healthy weight, maintain your current physical acivity levels and calorie intake.</string>
    <string name="overweight">If you are overweight, you need to start to reduce your calorie intake and increase physical activity.</string>
    <string name="obese">If you are obese, please seek advice from a weight management practitioner.</string>
    <string name="name_hint">Enter your name</string>
    <string name="height_hint">Enter your height (CM)</string>
    <string name="weight_hint">Enter your weight (KG)</string>
    <string name="save">SAVE</string>
    <string name="clear">CLEAR</string>
    <string name="clear_and_save">DELECT ALL RECORD</string>
    <string-array name="Gender">
        <item>Please choose a gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>
    <string name="bmi_hint">No data received yet</string>
    <string name="tv_zodiac">Zodiac:</string>
    <string name="what_is">What is this zodiac:</string>
    <string name="personality">Personality:</string>
    <string name="match">Matches:</string>
    <string name="conflicts">Conflicts:</string>
    <string name="aries">Aries</string>
    <string name="taurus">Taurus</string>
    <string name="gemini">Gemini</string>
    <string name="cancer">Cancer</string>
    <string name="leo">Leo</string>
    <string name="virgo">Virgo</string>
    <string name="libra">Libra</string>
    <string name="scorpius">Scorpius</string>
    <string name="sagittarius">Sagittarius</string>
    <string name="capricornus">Capricornus</string>
    <string name="aquarius">Aquarius</string>
    <string name="pisces">Pisces</string>
    <string name="Aries">Aries contains no very bright stars; the brightest star, Hamal (Arabic for “sheep”), has a magnitude of 2.0. The first point of Aries, or vernal equinox, is an intersection of the celestial equator with the apparent annual pathway of the Sun and the point in the sky from which celestial longitude and right ascension are measured. </string>
    <string name="Taurus">Taurus is the second sign of the zodiac, considered as governing that portion of the year from about April 20 to about May 20. Its representation as a bull is related to the Greek myth of Zeus, who assumed the form of a bull to abduct Europa.</string>
    <string name="Gemini">In astrology, Gemini is the third sign of the zodiac, considered as governing the period from about May 21 to about June 21. It is represented by a set of twins (or in Egyptian astrology by a pair of goats and in Arabian astrology by a pair of peacocks). </string>
    <string name="Cancer">Cancer is the fourth sign of the zodiac, considered as governing the period from about June 22 to about July 22. Its representation as a crab (or lobster or crayfish) is related to the crab in Greek mythology that pinched Heracles while he was fighting the Lernaean hydra. Crushed by Heracles, the crab was rewarded by Heracles’ enemy, Hera, by being placed in the heavens.</string>
    <string name="Leo">In astrology, Leo is the fifth sign of the zodiac, considered as governing the period from about July 23 to about August 22. Its representation as a lion is usually linked with the Nemean lion slain by Heracles (Hercules).</string>
    <string name="Virgo">Virgo is the sixth sign of the zodiac, considered as governing the period from about August 23 to about September 22. It is represented as a young maiden carrying a sheaf of wheat. She is variously identified as a fertility goddess (the Babylonian and Assyrian Ishtar, among others) or the harvest maiden (the Greek Persephone and others).</string>
    <string name="Libra">Libra is the seventh sign of the zodiac, considered as governing the period from about September 22 to about October 23. It is represented by a woman (sometimes identified with Astraea, the Roman goddess of justice), holding a balance scale or by the balance alone.</string>
    <string name="Scorpius">Scorpius (or Scorpio) is the eighth sign of the zodiac, considered as governing the period from about October 24 to about November 21. Its representation as a scorpion is related to the Greek legend of the scorpion that stung Orion to death (said to be why Orion sets as Scorpius rises in the sky). </string>
    <string name="Sagittarius">Sagittarius is the ninth sign of the zodiac, considered as governing the period from about November 22 to about December 21. It is represented either by a centaur shooting a bow and arrow or by an arrow drawn across a bow.</string>
    <string name="Capricornus"> Capricornus (also called Capricorn) is the 10th sign of the zodiac, considered as governing the period from about December 22 to about January 19. One explanation of the fishtail with which the goat is often represented is found in the Greek myth of Pan, who, to avoid the monster Typhon, jumped into the water just as he was changing into animal shape.</string>
    <string name="Aquarius">Aquarius is the 11th sign of the zodiac, considered as governing the period from about January 20 to about February 18. Its representation as a man pouring a stream of water out of a jug came about, it has been suggested, because in ancient times the rising of Aquarius coincided in the Middle East with a period of floods and rain.</string>
    <string name="Pisces">Pisces is the 12th sign of the zodiac, considered as governing the period from about February 19 to about March 20. Its representation as two fish tied together is usually related to the Greek myth of Aphrodite and Eros, who jumped into a river to escape the monster Typhon and changed into fish, or, alternatively, the two fish that carried them to safety.</string>
    <string name="p_Aries">The first sign of the zodiac, Aries loves to be number one. Naturally, this dynamic fire sign is no stranger to competition. Bold and ambitious, Aries dives headfirst into even the most challenging situations—and they will make sure they always come out on top!</string>
    <string name="p_Taurus">What sign is more likely to take a six-hour bath, followed by a luxurious Swedish massage and decadent dessert spread? Why Taurus, of course! Taurus is an earth sign represented by the bull. Like their celestial spirit animal, Taureans enjoy relaxing in serene, bucolic environments surrounded by soft sounds, soothing aromas, and succulent flavors.</string>
    <string name="p_Gemini">Have you ever been so busy that you wished you could clone yourself just to get everything done? That is the Gemini experience in a nutshell. Spontaneous, playful, and adorably erratic, Gemini is driven by its insatiable curiosity. Appropriately symbolized by the celestial twins, this air sign was interested in so many pursuits that it had to double itself.</string>
    <string name="p_Cancer">Represented by the crab, Cancer seamlessly weaves between the sea and shore representing Cancer’s ability to exist in both emotional and material realms. Cancers are highly intuitive and their psychic abilities manifest in tangible spaces. But—just like the hard-shelled crustaceans—this water sign is willing to do whatever it takes to protect itself emotionally. In order to get to know this sign, you are going to need to establish trust!</string>
    <string name="p_Leo">Roll out the red carpet because Leo has arrived. Passionate, loyal, and infamously dramatic, Leo is represented by the lion and these spirited fire signs are the kings and queens of the celestial jungle. They are delighted to embrace their royal status: Vivacious, theatrical, and fiery, Leos love to bask in the spotlight and celebrate… well, themselves.</string>
    <string name="p_Virgo">You know the expression, "if you want something done, give it to a busy person?" Well, that definitely is the Virgo anthem. Virgos are logical, practical, and systematic in their approach to life. Virgo is an earth sign historically represented by the goddess of wheat and agriculture, an association that speaks to Virgo is deep-rooted presence in the material world. This earth sign is a perfectionist at heart and isn’t afraid to improve skills through diligent and consistent practice.</string>
    <string name="p_Libra">Balance, harmony, and justice define Libra energy. As a cardinal air sign, Libra is represented by the scales (interestingly, the only inanimate object of the zodiac), an association that reflects Libra is fixation on establishing equilibrium. Libra is obsessed with symmetry and strives to create equilibrium in all areas of life — especially when it comes to matters of the heart.</string>
    <string name="p_Scorpius">Elusive and mysterious, Scorpio is one of the most misunderstood signs of the zodiac. Scorpio is a water sign that uses emotional energy as fuel, cultivating powerful wisdom through both the physical and unseen realms. In fact, Scorpio derives its extraordinary courage from its psychic abilities, which is what makes this sign one of the most complicated, dynamic signs of the zodiac. </string>
    <string name="p_Sagittarius">Oh, the places Sagittarius goes! But… actually. This fire sign knows no bounds. Represented by the archer, Sagittarians are always on a quest for knowledge. The last fire sign of the zodiac, Sagittarius launches its many pursuits like blazing arrows, chasing after geographical, intellectual, and spiritual adventures.</string>
    <string name="p_Capricornus">What is the most valuable resource? For Capricorn, the answer is clear: Time. Capricorn is climbing the mountain straight to the top and knows that patience, perseverance, and dedication is the only way to scale. The last earth sign of the zodiac, Capricorn, is represented by the sea-goat, a mythological creature with the body of a goat and the tail of a fish. Accordingly, Capricorns are skilled at navigating both the material and emotional realms.</string>
    <string name="p_Aquarius">Despite the "aqua" in its name, Aquarius is actually the last air sign of the zodiac. Innovative, progressive, and shamelessly revolutionary, Aquarius is represented by the water bearer, the mystical healer who bestows water, or life, upon the land. Accordingly, Aquarius is the most humanitarian astrological sign. At the end of the day, Aquarius is dedicated to making the world a better place.</string>
    <string name="p_Pisces">Have you looked up the word "psychic" in the dictionary, there would definitely be a picture of Pisces next to it. Pisces is the most intuitive, sensitive, and empathetic sign of the entire zodiac — and that’s because it’s the last of the last. As the final sign, Pisces has absorbed every lesson — the joys and the pain, the hopes and the fears — learned by all of the other signs. It is symbolized by two fish swimming in opposite directions, representing the constant division of Pisces attention between fantasy and reality.</string>
    <string name="error">Please enter all your information</string>
    <string name="UnderWeight">Under Weight</string>
    <string name="HealthyWeight">Healthy Weight</string>
    <string name="OverWeight">Overweight</string>
    <string name="Obese">Obese</string>
</resources>