<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ZodiacFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="3">

                    <TextView
                        android:id="@+id/tv_zodiac_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:text="@string/name"
                        android:textColor="@color/black"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/tv_get_zodiac_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:hint="@string/bmi_hint"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="30sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="3">

                    <TextView
                        android:id="@+id/tv_zodiac_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:text="@string/birth"
                        android:textColor="@color/black"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/tv_get_zodiac_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:hint="@string/bmi_hint"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="30sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="3">

                    <TextView
                        android:id="@+id/tv_zodiac_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:text="@string/gender"
                        android:textColor="@color/black"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/tv_get_zodiac_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:hint="@string/bmi_hint"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="30sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/tv_zodiac_zodiac"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:text="@string/tv_zodiac"
                        android:textColor="@color/black"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/tv_get_zodiac_zodiac"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:hint="@string/bmi_hint"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="30sp" />
                </TableRow>

            </TableLayout>

            <ImageView
                android:id="@+id/iv_zodiac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/tv_zodiac_what"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/what_is"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tv_get_what"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/bmi_hint"
                android:justificationMode="inter_word"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_zodiac_personality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/personality"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tv_get_personality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/bmi_hint"
                android:justificationMode="inter_word"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_zodiac_match"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:text="@string/match"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_get_match"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/bmi_hint"
                android:justificationMode="inter_word"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_zodiac_conflicts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:text="@string/conflicts"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_get_conflicts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/bmi_hint"
                android:justificationMode="inter_word"
                android:textColor="@color/black"
                android:textSize="24sp" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>